--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pcap_gen_ovs_dos"]
 	path = pcap_gen_ovs_dos
 	url = https://github.com/cslev/pcap_gen_ovs_dos
+[submodule "pcap_generator"]
+	path = pcap_generator
+	url = https://github.com/cslev/pcap_generator
