update telegraf script

--- a/tools_for_measurements/telegraf.conf
+++ b/tools_for_measurements/telegraf.conf
@@ -114,7 +114,7 @@
 # Read metrics about network interface usage
 [[inputs.net]]
   # collect data only about specific interfaces
-  interfaces = ["ens3f0"]
+  interfaces = ["ens2"]
 
 [[inputs.netstat]]
   # no configuration
