enable more logging features with telegraf

--- a/tools_for_measurements/telegraf.conf
+++ b/tools_for_measurements/telegraf.conf
@@ -100,12 +100,21 @@
   # no configuration
 
 # Get kernel statistics from /proc/stat
-#[[inputs.kernel]]
+[[inputs.kernel]]
   # no configuration
 
 # Get the number of processes and group them by status
-#[[inputs.processes]]
+[[inputs.processes]]
   # no configuration
+
+# Get disk i/o
+[[inputs.diskio]]
+  # no configuration
+
+# Get disk 
+[[inputs.disk]]
+  # no configuration
+
 
 # Read metrics about system load & uptime
 [[inputs.system]]
